svc-gold.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc-gold
spec: 
  selector:
    app: gold
  type: ClusterIP  
  ports:
   - port: 80
